Property Management System/force-app/main/default/objects/Unit_Type_Reservation__c/Unit_Type_Reservation__c.object-meta.xml
<CustomObject>
    <label>Unit Type Reservation</label>
    <nameField>
        <displayFormat>UTR-{0000}</displayFormat>
        <label>Unit Reservation Type Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Type Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>