Property Management System/force-app/main/default/objects/Unit_Type_Reservation__c/fields/Active_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Active_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Assignment</label>
    <referenceTo>Assignment__c</referenceTo>
    <relationshipLabel>Unit Type Reservations (Active Assignment)</relationshipLabel>
    <relationshipName>Unit_Type_Reservations1</relationshipName>
    <type>Lookup</type>
</CustomField>