Property Management System/force-app/main/default/objects/Unit_Type_Reservation__c/fields/No_of_Children__c.field-meta.xml
<CustomField>
    <fullName>No_of_Children__c</fullName>
    <label>No. of Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>