Property Management System/force-app/main/default/objects/Unit_Type_Reservation__c/fields/Reservation_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Member_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Reservation Member Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Unit Type Reservations</relationshipLabel>
    <relationshipName>Unit_Type_Reservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>