Property Management System/force-app/main/default/objects/Unit_Type_Reservation__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Unit Type Reservations</relationshipLabel>
    <relationshipName>Unit_Type_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>