Property Management System/force-app/main/default/objects/Unit_Type_Reservation__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit Type</label>
    <referenceTo>Unit_Type__c</referenceTo>
    <relationshipLabel>Unit Type Reservations</relationshipLabel>
    <relationshipName>Unit_Type_Reservations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>