Property Management System/force-app/main/default/objects/Unit_Type_Reservation__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Reservation_Member_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Unit_Type__c</columns>
    <columns>Unit__c</columns>
    <columns>Active_Assignment__c</columns>
    <columns>Reservation__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Check_In_Date__c</columns>
    <columns>Check_Out_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>